--- a/Game/src/main/resources/css/estilos.css
+++ b/Game/src/main/resources/css/estilos.css
@@ -6,8 +6,8 @@
     -fx-background-repeat: no-repeat;    /* Impede a repetição */
     -fx-background-position: center center; /* Centraliza a imagem */
 
-    /* GARANTINDO QUE O FUNDO SE ESPALHE POR TODA A ÁREA */
-    -fx-background-color: transparent;   /* Garante que não haja uma cor de fundo sólida por baixo */
+    /* garante que o fundo se espalhe por toda a tela */
+    -fx-background-color: transparent;   /* Garante que não haja uma cor de fundo*/
 }
 .play-button {
     -fx-font-size: 30px;
@@ -22,22 +22,22 @@
 }
 .button-battle {
     -fx-background-image: url('../images/BattleButton.png'); /* Caminho para imagem */
-    -fx-background-size: contain; /* Ajusta a imagem DENTRO do botão, mantendo proporção */
+    -fx-background-size: contain; /* Ajusta a imagem dentro do botão, mantendo proporção */
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
-    -fx-background-color: transparent; /* MUITO IMPORTANTE: torna o fundo do JavaFX transparente */
+    -fx-background-color: transparent; /* torna o fundo do JavaFX transparente */
 
     /* Define o tamanho do botão para corresponder ao tamanho da imagem */
-    -fx-pref-width: 250px; /* Ajuste para a largura da imagem */
-    -fx-pref-height: 100px; /* Ajuste para a altura da imagem */
+    -fx-pref-width: 250px; /* Ajusta largura da imagem */
+    -fx-pref-height: 100px; /* Ajusta altura da imagem */
 
     -fx-padding: 0; /* Remove qualquer preenchimento extra que o botão JavaFX possa ter */
-    -fx-text-fill: transparent; /* Se tiver texto no botão JavaFX, o deixa invisível */
+    -fx-text-fill: transparent; /* Se tiver texto no botão JavaFX,deixa invisível */
 }
 
-/* Opcional: Efeito ao passar o mouse */
+/*Efeito ao passar o mouse */
 .button-battle:hover {
-    -fx-opacity: 0.9; /* Deixa o botão um pouco transparente para indicar interação */
+    -fx-opacity: 0.9; /* Deixa o botão um pouco transparente  */
     -fx-cursor: hand; /* Muda o cursor para uma mãozinha */
 }
 
